--- a/mobile app/stylesheet.kv
+++ b/mobile app/stylesheet.kv
@@ -1,52 +1,81 @@
-WindowManager:
-    MainWindow:
-    SecondWindow:
-    ThirdWindow:
 
 <MainWindow>:
     name: "main"
+    uName: uName
 
     FloatLayout:
         cols:1
+
+        TextInput:
+            id: uName
+            font_size: 30
+            multiline: False
+            pos_hint: {"x": 0.25, "top":0.9}
+            size_hint: .5,.12
+
         Button:
             size_hint: .5,.12
             pos_hint: {"x": .25, "top": .8}
             text: "Clock in/out"
             on_release:
-                root.showPop()
-
+                root.punch() if root.checkInput() == 1 else root.invalidEntry()
 
         Button:
             size_hint: .5,.12
             pos_hint: {"x": .25, "top": .6}
             text: "View Past Clocks"
             on_release:
-                root.showPop()
-                app.root.current = "second"
+                root.update2ndName()
                 root.manager.transition.direction = "left"
-
-
+                app.root.current = "second"
         Button:
             size_hint: .5,.12
             pos_hint: {"x": .25, "top": .4}
             text: "Hours Worked"
             on_release:
-                root.showPop()
-                app.root.current = "third"
                 root.manager.transition.direction = "left"
+                app.root.current = "third"
 
 
 
 <SecondWindow>:
     name: "second"
 
-    Button:
-        text: "Go Back"
-        size_hint: .2,.1
-        pos_hint: {"x": 0, "top": .15}
-        on_release:
-            app.root.current = "main"
-            root.manager.transition.direction = "right"
+    FloatLayout:
+
+        Label:
+            id: name_label
+            pos_hint: {"x": .2, "top": 1}
+            size_hint_y: None
+            height: self.texture_size[1]
+            text_size: self.width, None
+            padding: 10, 10
+            font_size: 24
+            text: 'Whatever Name'
+
+
+        ScrollView:
+            do_scroll_y: False
+            do_scroll_y: True
+            pos_hint: {"x": .5, "top": 1}
+
+            Label:
+                id: list
+                size_hint_y: None
+                height: self.texture_size[1]
+                text_size: self.width, None
+                padding: 10, 10
+                font_size: 24
+                text:
+
+
+        Button:
+            text: "Go Back"
+            size_hint: .2,.1
+            pos_hint: {"x": 0, "top": .15}
+            on_release:
+                app.root.current = "main"
+                root.manager.transition.direction = "right"
 
 <ThirdWindow>:
     name: "third"
@@ -59,28 +88,3 @@ WindowManager:
             app.root.current = "main"
             root.manager.transition.direction = "right"
 
-<P>:
-    username: usernameInput
-    title: ""
-    size_hint: None, None
-    size: 400, 400
-    FloatLayout:
-        Label:
-            text: "Please enter your UserName"
-            size_hint: .6, .1
-            pos_hint: {"x":.2,"top":.8}
-
-        TextInput:
-            id: usernameInput
-            font_size: 30
-            multiline: False
-            pos_hint: {"x": 0.1, "top":0.7}
-            size_hint: 0.8, 0.4
-
-        Button:
-            text: "Submit"
-            size_hint: .6, .2
-            pos_hint: {"x":.2,"top":.25}
-            on_release:
-                root.assignName()
-                root.dismiss()
